# ks-scraper-testing

./: .gitignore  README.md  batch-scraping.py  count-pdfs.py  main.py  plot_kommune_csv.py  pyproject.toml
KUDOS_tool/: main.py  pyproject.toml
NOU_scraper/: NOU_scraper.py  batch-scraping.py  errors.txt  overview-list.html  pyproject.toml
document_classification_testing/: main.py  pyproject.toml
scrapy_kommune_pdf_scraper/: FoU-overview.json  alle-uten--finnmark.csv  kommuner.json  scrapy.cfg
scrapy_kommune_pdf_scraper/scrapy_kommune_pdf_scraper/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_kommune_pdf_scraper/scrapy_kommune_pdf_scraper/helper_scripts/: download_and_organize_FoU.py
scrapy_kommune_pdf_scraper/scrapy_kommune_pdf_scraper/spiders/: fou_scraper.py  pdf_scraper.py
