[tool.poetry]
name = "kudos-tool"
version = "0.1.0"
description = ""
authors = ["Severin Gartland <sfgartland@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.15.2"
rich = "^13.9.4"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
