[tool.poetry]
name = "ks-scraper-testing"
version = "0.1.0"
description = ""
authors = ["Severin Gartland <sfgartland@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.13.3"
typer = "^0.15.2"
requests = "^2.32.3"
matplotlib = "^3.10.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
